--- a/front/opgg/src/Components/Match.css
+++ b/front/opgg/src/Components/Match.css
@@ -5,12 +5,14 @@
     align-items: center;
     justify-content: center;
     width: 70%;
+
     margin-top: 20px;
-    padding: 20px;
+    padding: 15px;
     border: 1px solid #e9eff4;
     border-radius: 5px;
     background-color: #17161c;
-
+    display: inline;
+    max-height: 150px;
 }
 #won{
     background-color: #373653;
@@ -18,38 +20,48 @@
 #lost{
     background-color: #3b292e;
 }
+.general{
+    float: left;
+    font-size: 0.7em;
+    margin-right: 1em;
+    width: 15%;
+}
 .summoner{
     float: left;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 40%;
 }
 .mainCharacterPortrait{
-    width: 20%;
+    max-width: 125px;
 }
 .participantImage{
     width: 7%;
 }
-/* .participants{
+.participants{
+    width: 30%  ;
     float: right;
-} */
-.winners, .losers {
     display: flex;
-    flex-direction: column;
-    float: right;
-   margin-right: 0.5em;
-   margin-top: none;
-   padding: none;
-   justify-content: center;
+    margin: 0;
+    padding: 0;
+    display: inline;
+    height: 100%;
+    
 }
-.participant p{
-    float: right;
+.winners, .losers {
+display: inline;
+margin-right: 0.2em;
+justify-content: center;
+font-size: 0.5em;
 }
-.winners img, .losers img{
-  width: 15%;
-  
+.winners img, .losers img {
+    width: 7%;
+}
+.winners h3, .losers h3{
+    float:right
 }
 
-.teams {
-    display: inline;
-    justify-content: space-between;
-}
+
 
 .paritcipant{display: inline-block;}
