--- a/front/opgg/src/Components/Match.css
+++ b/front/opgg/src/Components/Match.css
@@ -1,24 +1,21 @@
 .match{
     float: right;
-  
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 70%;
-
     margin-top: 20px;
     padding: 15px;
-    border: 1px solid #e9eff4;
+    border: 1px solid #131313;
     border-radius: 5px;
     background-color: #17161c;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
     display: inline;
     max-height: 150px;
+    overflow: hidden;
 }
 #won{
     background-color: #373653;
 }
 #lost{
-    background-color: #3b292e;
+    background-color: #2e2326;
 }
 .general{
     float: left;
@@ -41,27 +38,42 @@
 }
 .participants{
     width: 30%  ;
-    float: right;
-    display: flex;
+    ;
+    display: inline-block;
     margin: 0;
     padding: 0;
-    display: inline;
-    height: 100%;
+    height: 150px;
     
 }
 .winners, .losers {
-display: inline;
+
 margin-right: 0.2em;
-justify-content: center;
+
 font-size: 0.5em;
 }
-.winners img, .losers img {
-    width: 7%;
+.losers{
+    color: #ff0000;
+    float: right;
 }
-.winners h3, .losers h3{
-    float:right
+.winners{
+    color: #00ff00;
+    float: left;
 }
-
-
-
-.paritcipant{display: inline-block;}
+.participant{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: 0;
+    padding: 0;    
+}
+.participant img{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin-right: 0.5em;
+    float: left;
+}
+.participant h3{
+    float: right;
+    margin-left: 1em;
+}
