--- a/front/opgg/src/Components/Match.css
+++ b/front/opgg/src/Components/Match.css
@@ -20,7 +20,22 @@
     background-color: #2e2326;
 }
 .items img{
-    width: 40px;
+    width: 30px;
+    
+}
+.items{
+
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    max-height: 30px;
+    margin-right: 1em;
+    display: flex
+}
+.emptyItem{
+    width: 30px;
+    height: 30px;
+    background-color: #00ff00;
 }
 .general{
     float: left;
@@ -34,7 +49,8 @@
     justify-content: left;
     align-items: center;
     font-size: 0.8em;
-    width: 40%;
+
+    width: 50%;
 }
 .mainCharacterPortrait{
     max-width: 125px;
@@ -44,12 +60,11 @@
 }
 .participants{
     width: 30%  ;
-    ;
-    display: inline-block;
+
     margin: 0;
     padding: 0;
     height: 150px;
-    
+    float: right;
 }
 .winners, .losers {
 
