Match Details progress

--- a/front/opgg/src/Components/Profile.css
+++ b/front/opgg/src/Components/Profile.css
@@ -13,6 +13,9 @@
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
 
 }
+.matchList{
+  float: right;
+}
 .updateButton:hover{
   cursor: pointer;
   color: rgb(0 0 0 / 0.2);
