--- a/front/opgg/src/Components/Profile.css
+++ b/front/opgg/src/Components/Profile.css
@@ -1,3 +1,6 @@
+.profilePage{
+  display: inline;
+}
 .profileTab{
     margin-top: 1%;
     margin-left: 1%;
@@ -8,14 +11,16 @@
     height: 100%;
     justify-content: center;
     text-align: center;
-
     float: left;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
+    /* margin-bottom: 560vh; */
 
 }
 .matchList{
-  float: right;
+  width: 100%;
+  display: block;
 }
+
 .updateButton:hover{
   cursor: pointer;
   color: rgb(0 0 0 / 0.2);
