--- a/front/opgg/src/Components/MatchDetails.css
+++ b/front/opgg/src/Components/MatchDetails.css
@@ -1,5 +1,7 @@
-.matchDetails{
-    background-color: aquamarine;
-    height: 100px;
-    width: 100%;
+.detailedChamp{
+    width: 30px;
+    border-radius: 50%;
+}
+.detailedParticipant:hover{
+    background-color: rgb(100, 100, 100, 0.2);
 }
