--- a/front/opgg/src/Components/MatchDetails.css
+++ b/front/opgg/src/Components/MatchDetails.css
@@ -5,3 +5,26 @@
 .detailedParticipant:hover{
     background-color: rgb(100, 100, 100, 0.2);
 }
+.itemParticipant{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    color: black;
+    background-color: black;
+}
+.participantItems{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.participantRunes img{
+    width: 20px;
+}
+td {
+    text-align: center;
+    margin-right: 1em;
+    margin-left: 1em;
+    padding-right: 1em;
+}
