--- a/front/opgg/src/Components/Profile.css
+++ b/front/opgg/src/Components/Profile.css
@@ -40,7 +40,7 @@
 .rankQueue{
     font-size: 1em;
     font-weight: 800;
-    color: #F98DF5;
+    color: #959cfb;
 }
 .summonerIcon{
     border-radius: 50%;
@@ -51,7 +51,7 @@
 .gameName{
     font-size: 1.5em;
     font-weight: 800;
-    color: #F98DF5;
+    color: #959cfb;
 }
 .riotTag{
     font-size: 1.25em;
