--- a/front/opgg/src/Components/Navbar.css
+++ b/front/opgg/src/Components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     background-color: #25242d;
-    color: #F98DF5;
+    color: #959cfb;
     padding: 10px;
     box-sizing: border-box;
     display: flex;
